Fix face stretch on webkit

--- a/_includes/index.scss
+++ b/_includes/index.scss
@@ -218,7 +218,8 @@ body {
   height: 166px;
   background-color: hsl(39.4, 26.4%, 47.5%);
   filter: saturate(0.5) contrast(1.3) brightness(1.5);
-  width: max-content;
+  width: auto;
+  margin-right: auto;
   border-radius: 50%;
 }
 
